cmake_minimum_required(VERSION 3.15)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/planarize)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/isolines)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/triangulation)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/geodistance)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/booleans)
