cmake_minimum_required(VERSION 3.14)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/planarize)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/isolines)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/triangulation)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/geodistance)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/csgtree)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/booleans)
