cmake_minimum_required(VERSION 3.12)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/triangulation)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/planarization)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/iso)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/geodistance)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/MeshPattern)